# python_web_hw7_sqlalchemy

./: README.md  my_select.py  pyproject.toml
DataBase/: db.py  models.py  seeds.py
alembic/: env.py
alembic/versions/: 07c9b8433cc3_init.py  156f868771a9_init.py  15b3b6a5b35f_init.py  1669b7ceea63_init.py  1d20ab8c2be2_init.py  3b6ede30e7d5_init.py  4ae2080d6f67_init.py  6e8ada34264e_init.py  727215d9b89a_init.py  748206cc8203_init.py  76ee74dc3f3d_init.py  7d65d7a50fb9_init.py  7e16ded99dc2_init.py  7e75be31a1f7_init.py  7ea5ed3e49cb_init.py  963fd802bb86_init.py  aa63b2fbbd4a_init.py  b29711825594_init.py  b64e6fa3bd17_init.py  c00f1e85c215_init.py  c0cb0957bc43_init.py  c24485ad4a77_init.py  c768e73a4bf7_init.py  cdd68be8ea99_init.py  cff2bc209485_init.py  d8dea8de6cc6_init.py  e220247497ea_init.py  ef633bc935b9_init.py  fbadab663a06_init.py
myenv7/: config.ini  db.py  insert.py  models.py  pyproject.toml  seeds.py
myenv7/myenv7/: create_tables.py  db_connection.py  drop_tables.py  query_1.py  query_10.py  query_2.py  query_5.py  query_7.py  query_8.py  seed.py
myenv7/myenv7/querry/: query_11.py  query_12.py  query_3.py  query_4.py  query_6.py  query_9.py
