[tool.poetry]
name = "python-web-hw7-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Kirienko-Alyona <ladybird.miami@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_hw7_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.4"
sqlalchemy = "^2.0.4"
psycopg2 = "^2.9.5"
fake = "^0.8"
termcolor = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
